--- a/gif-chat/package.json
+++ b/gif-chat/package.json
@@ -4,15 +4,18 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.19.2",
+    "color-hash": "^1.0.3",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "mongoose": "^5.9.26",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "pug": "^3.0.0",
-    "socket.io": "^2.3.0",
-    "ws": "^7.3.1"
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
