--- a/auction/package.json
+++ b/auction/package.json
@@ -14,6 +14,11 @@
     "@types/morgan": "^1.9.1",
     "@types/multer": "^1.4.3",
     "@types/node": "^14.0.27",
+    "@typescript-eslint/eslint-plugin": "^3.8.0",
+    "@typescript-eslint/parser": "^3.8.0",
+    "eslint": "^7.6.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.0",
     "nodemon": "^2.0.4",
     "ts-loader": "^8.0.2",
     "ts-node": "^8.10.2",
@@ -34,6 +39,6 @@
   },
   "scripts": {
     "start": "nodemon --exec ts-node src/app.ts",
-    "build": "webpack"
+    "build": "webpack --watch src/app.ts"
   }
 }
