--- a/auction/.eslintrc.json
+++ b/auction/.eslintrc.json
@@ -5,11 +5,15 @@
     "node": true
   },
   "extends": ["airbnb-base"],
+
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": 11,
     "sourceType": "module"
   },
   "plugins": ["@typescript-eslint"],
-  "rules": {}
+  "rules": {
+    "import/no-unresolved": "off",
+    "import/extensions": "off"
+  }
 }
