--- a/auction/package.json
+++ b/auction/package.json
@@ -28,6 +28,10 @@
     "webpack-node-externals": "^2.5.0"
   },
   "dependencies": {
+    "@types/bcrypt": "^3.0.0",
+    "@types/passport": "^1.0.4",
+    "@types/passport-local": "^1.0.33",
+    "bcrypt": "^5.0.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
@@ -35,7 +39,11 @@
     "express-session": "^1.17.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "pug": "^3.0.0"
+    "mysql2": "^2.1.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "pug": "^3.0.0",
+    "sequelize": "^6.3.4"
   },
   "scripts": {
     "start": "nodemon --exec ts-node src/app.ts",
