--- a/auction/.eslintrc.json
+++ b/auction/.eslintrc.json
@@ -14,6 +14,9 @@
   "plugins": ["@typescript-eslint"],
   "rules": {
     "import/no-unresolved": "off",
-    "import/extensions": "off"
+    "import/extensions": "off",
+    "no-console": "off",
+    "consistent-return": "off",
+    "object-curly-newline": "off"
   }
 }
