--- a/auction/package.json
+++ b/auction/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "@types/connect-flash": "^0.0.35",
     "@types/cookie-parser": "^1.4.2",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.7",
     "@types/express-session": "^1.17.0",
     "@types/morgan": "^1.9.1",
@@ -46,7 +47,7 @@
     "sequelize": "^6.3.4"
   },
   "scripts": {
-    "start": "nodemon --exec ts-node src/app.ts",
+    "start": "nodemon --exec ts-node src/app.ts -e ts,js",
     "build": "webpack --watch src/app.ts"
   }
 }
