--- a/auction/package.json
+++ b/auction/package.json
@@ -15,6 +15,7 @@
     "@types/morgan": "^1.9.1",
     "@types/multer": "^1.4.3",
     "@types/node": "^14.0.27",
+    "@types/socket.io": "^2.1.10",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
     "eslint": "^7.6.0",
@@ -44,7 +45,9 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pug": "^3.0.0",
-    "sequelize": "^6.3.4"
+    "sequelize": "^6.3.4",
+    "socket.io": "^2.3.0",
+    "sse": "^0.0.8"
   },
   "scripts": {
     "start": "nodemon --exec ts-node src/app.ts -e ts,js",
