--- a/auction/package.json
+++ b/auction/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/node-schedule": "^1.3.0",
     "@types/passport": "^1.0.4",
     "@types/passport-local": "^1.0.33",
     "bcrypt": "^5.0.0",
@@ -42,6 +43,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "mysql2": "^2.1.0",
+    "node-schedule": "^1.3.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pug": "^3.0.0",
